# monorepo

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  api-cargo.toml  fly.toml  package.json
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: deploy-api.yml  deploy-desktop.yml  test-api.yml  test-desktop.yml  upload-to-s3.yml
apps/: .dockerignore  Dockerfile
apps/api/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  arm64-dockerfile  build.rs  config.toml  generate-keys.sh  generate-signed-token.js  rust-toolchain.toml  schema.surrealql
apps/api/.cargo/: config.toml
apps/api/binaries/darwin-arm64/: libwhatsapp.h
apps/api/binaries/linux-arm64/: libwhatsapp.h
apps/api/binaries/linux-x86_64/: libwhatsapp.h
apps/api/binaries/windows-x86_64/: libwhatsapp.h
apps/api/src/: main.rs
apps/api/src/app/: common.rs  mod.rs
apps/api/src/app/admin/: generate_qr_code.rs  middleware.rs  mod.rs
apps/api/src/app/auth/: mod.rs  resend_signin_code.rs  send_signin_code.rs  test_resend_signin_code.rs  test_send_signin_code.rs
apps/api/src/app/sync/: check_sync_availability.rs  mod.rs  test_check_sync_availability.rs  test_upload_chunk.rs  upload_chunk.rs
apps/api/src/database/: center.rs  local_structs.rs  mod.rs  schema.rs  signin_code.rs  sync.rs  test_center.rs  test_define_database.rs  test_schema.rs  test_signin_code.rs  test_sync.rs  test_user.rs  user.rs
apps/api/src/proc_macros/: mod.rs
apps/api/src/settings/: mod.rs
apps/api/src/telegram/: mod.rs  requests.rs  tdlib.rs
apps/api/src/telegram/functions/: get_authorization_state.rs  mod.rs  set_verbosity_level.rs
apps/api/src/validation/: mod.rs
apps/api/src/whatsapp/: mod.rs
apps/bluetooth-advert-receiver/: Cargo.toml
apps/bluetooth-advert-receiver/src/: main.rs
apps/desktop/: .env.example  Dockerfile  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts  vitest.setup.ts
apps/desktop/src/: app.css  i18n.js  index.test.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/binaries/build-libs/: .gitignore
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  panic_handler.rs  process_killer.rs  surreal_sidecar.rs  whatsapp_sidecar.rs
apps/desktop/src-tauri/src/app/: database_auth.rs  global_keys.rs  key_pair.rs  mod.rs  network_discovery.rs  reports.rs  splash_screen.rs
apps/desktop/src-tauri/src/central/: mod.rs
apps/desktop/src-tauri/src/network_discovery/: mod.rs
apps/desktop/src-tauri/src/pdf/: mod.rs  receipt.rs
apps/desktop/src-tauri/src/processes/: mod.rs
apps/desktop/src-tauri/src/sync/: mod.rs  test_sync.rs
apps/desktop/src/central/: auth.ts  center.ts  index.ts
apps/desktop/src/common/: index.ts  surreal.ts
apps/desktop/src/components/: AcademicYearSelector.svelte  Login.svelte  Navigation.svelte  SetSignUpRemotePassword.svelte  locales.svelte
apps/desktop/src/components/common/button/: Button.svelte
apps/desktop/src/components/common/hoverableAction/: HoverableAction.svelte
apps/desktop/src/components/localSignIn/: LocalLoginLayout .svelte  LocalSignInLayout.svelte  LoginLocal.svelte  SetSignInLocalPassword.svelte  UserSelector.svelte
apps/desktop/src/lib/: bindings.ts  logger.ts  whatsapp.ts
apps/desktop/src/locale/: ar.json  en.json
apps/desktop/src/locales/: ar.json  en.json
apps/desktop/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/desktop/src/routes/auth/: +layout.svelte
apps/desktop/src/routes/auth/localSignIn/: +layout.svelte  +page.svelte
apps/desktop/src/routes/auth/local_sign_in/: +layout.svelte  +page.svelte
apps/desktop/src/routes/auth/local_sign_in/forget_password_local/: +page.svelte
apps/desktop/src/routes/auth/local_sign_in/set_password_local_sign_in/: +page.svelte
apps/desktop/src/routes/auth/remote_sign_in/: +page.svelte
apps/desktop/src/routes/dashboard/: +layout.svelte
apps/desktop/src/routes/onboarding/select_academic_year/: +page.svelte
apps/desktop/src/routes/onboarding/set_remote_password/: +page.svelte
apps/desktop/src/sdk/: academic-year-course.ts  academic-year.ts  auth.ts  center.ts  common.ts  enrollment.ts  events.ts  group.ts  index.ts  manager.ts  schema.ts  space.ts  static-types.ts  student.ts  students.ts  user.ts
apps/desktop/src/test/: auth.test.ts  name-filter.test.ts  onboarding.test.ts  students.test.ts
apps/desktop/static/: splashscreen.html
apps/magmooty/: README.md  package.json  pnpm-lock.yaml
apps/magmooty/src/: +layout.svelte
apps/magmooty/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/magmooty/src-tauri/src/: main.rs
apps/magmooty/src-tauri/src/app/: mod.rs  students.rs  whatsapp.rs
apps/magmooty/src-tauri/src/database/: mod.rs
apps/magmooty/src-tauri/src/router/: mod.rs
apps/magmooty/src-tauri/src/whatsapp/: mod.rs
apps/magmooty/src/lib/: bindings.ts
apps/magmooty/src/routes/: +page.svelte
apps/src/lib/: bindings.ts
apps/telegram-bot/: Cargo.toml
apps/telegram-bot/src/: authentication_handler.rs  connection_state_handler.rs  lib.rs  requests.rs  tdlib.rs
apps/telegram-bot/src/classes/: chat.rs  user.rs
apps/telegram-bot/src/functions/: check_authentication_password.rs  create_private_chat.rs  get_authorization_state.rs  mod.rs  request_qrcode_authentication.rs  search_contacts.rs  search_user_by_phone_number.rs  send_message.rs  set_tdlib_parameters.rs  set_verbosity_level.rs
apps/telegram-macros/: Cargo.toml
apps/whatsapp-bot/: .dockerignore  .gitignore  README.md  bin.go  build-bins.sh  build-libs.sh  build.sh  go.mod  go.sum  lib.go  linux-arm64-dockerfile  linux-x86_64-dockerfile  main.go
apps/whatsapp-bot/cmd/api/: main.go
apps/whatsapp-bot/pkg/lib/: lib.go
apps/whatsapp-bot/whatsapp/: whatsapp.go
data/address-data/: enum-generator.ts  list-generator.ts  list.json
infra/surrealdb/: Dockerfile  fly.toml
infra/tdlib-builder/: build.sh  linux-arm64-dockerfile
libs/whatsapp-lib/: README.md  build.sh  go.sum
