[workspace]
resolver = "2"
members = [
    "apps/api",
    "apps/bluetooth-advert-receiver",
    "apps/desktop/src-tauri",
    "apps/telegram-macros",
    "apps/telegram-bot",
]

[profile.test]
opt-level = 0

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
