[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.39.1", features = ["full"] }
serde_json = "1.0"
axum = { version = "0.7.5", features = ["macros"] }
surrealdb = "1.5.4"
config = "0.14.0"
dotenv = "0.15.0"
once_cell = "1.19.0"
env_logger = "0.11.5"
log = "0.4.22"
validator = { version = "0.18.1", features = ["derive"] }
regex = "1.10.5"
rand = "0.8.5"
tower-http = { version = "0.5.2", features = ["catch-panic"] }
tower = "0.4.13"
bytes = "1.6.1"
http = "1.1.0"
http-body-util = "0.1.2"
