[package]
name = "api"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.39.1", features = ["full"] }
serde_json = "1.0"
axum = { version = "0.7.5", features = ["macros"] }
surrealdb = { version = "1.5.4", features = ["kv-mem"] }
config = "0.14.0"
dotenv = "0.15.0"
once_cell = "1.19.0"
env_logger = "0.11.5"
log = "0.4.22"
validator = { version = "0.18.1", features = ["derive"] }
regex = "1.10.5"
rand = "0.8.5"
tower-http = { version = "0.5.2", features = ["catch-panic"] }
tower = "0.4.13"
bytes = "1.6.1"
http = "1.1.0"
http-body-util = "0.1.2"
libc = "0.2.155"
qrcode-generator = "4.1.9"
jsonwebtoken = "9.3.0"
base64 = "0.22.1"
syn = "2.0.72"
quote = "1.0.36"
proc-macro2 = "1.0.86"
telegram-bot = { path = "../telegram-bot" }
mockall = "0.13.0"
axum-test = "15.3.0"
mockall_double = "0.3.1"
openssl = "0.10.66"
