[package]
name = "telegram-bot"
version = "0.1.22"
edition = "2021"

[lib]
name = "telegram_bot"
path = "src/lib.rs"

[dependencies]
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
telegram-macros = { path = "../telegram-macros" }
qr2term = "0.3.1"
async-trait = "0.1.81"
