[package]
name = "app"
version = "0.0.14"
description = "Magmooty Desktop Application"
authors = ["Magmooty"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }
cc = "1.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [
    "shell-sidecar",
    "http-request",
    "windows7-compat",
    "process-command-api",
    "updater",
    "devtools"
] }
tokio = { version = "1.29.1", features = ["full"] }
libc = "0.2.155"
specta = "1"
tauri-specta = { version = "1", features = ["javascript", "typescript"] }
ctrlc = "3.4.0"
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "sqlite"] }
log = "0.4.22"
simple_logger = "5.0.0"
rsa = "0.9.6"
rand = "0.8.5"
base64 = "0.22.1"
pnet = "0.35.0"
futures = "0.3.30"
surrealdb = "1.5.4"
once_cell = "1.19.0"
jsonwebtoken = "9.3.0"
openssl = "0.10.66"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.workspaces]
independent = true
